# task_10_bulk_server

./: CMakeLists.txt  main.cpp
